...
                    .foregroundColor(Color.brandWhite)
                    .background(Color.brandBlack)
                    .cornerRadius(SizeStandards.cornerRadiusGeneral)
                    .onTapGesture {
                        tab = 3
                    }
                    .accessibilityIdentifier("skipOnboardingText")
            }
            .padding(30)
            
            Image("onboarding_1")
                .resizable()
                .aspectRatio(contentMode: .fit)
...
